tests/snapshots/examples_fixtures/type_system__73_either_boundary_runtime_check_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/73_either_boundary_runtime_check_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
