tests/snapshots/examples_fixtures/type_system__74_generic_adt_module_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/74_generic_adt_module_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
