tests/snapshots/examples_fixtures/type_system__75_hm_polymorphic_compose_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/75_hm_polymorphic_compose_ok.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
