tests/snapshots/examples_fixtures/type_system__78_hm_typed_let_infix_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/78_hm_typed_let_infix_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
