tests/snapshots/examples_fixtures/type_system__79_hm_prefix_numeric_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/79_hm_prefix_numeric_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
