tests/snapshots/examples_fixtures/type_system__81_hm_match_known_type_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/81_hm_match_known_type_ok.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
