tests/snapshots/examples_fixtures/type_system__82_hm_index_known_type_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/82_hm_index_known_type_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
