tests/snapshots/examples_fixtures/type_system__83_hm_bool_condition_and_guard_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/83_hm_bool_condition_and_guard_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
