tests/snapshots/examples_fixtures/type_system__84_hm_logical_bool_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/84_hm_logical_bool_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
